UI alignment fix for the clipboard

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
             --custom-grey-4: #8394ac;
         }
 
-        /* Reusable styles */
+        /* Reusable styles start */
         .position-relative {
             position: relative;
         }
@@ -37,6 +37,8 @@
             font-size: 0.9rem;
         }
 
+        /* Reusables styles end */
+
         * {
             margin: 0;
             padding: 0;
@@ -63,12 +65,7 @@
         }
 
         .fa-clipboard-list {
-            width: 30px;
-            height: 30px;
-            transform: scale(1.3);
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin: 0 15px;
         }
 
         #todo-textbox {
